kubernetes-manifests/gui.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ac-gui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ac-app
  template:
    metadata:
      labels:
        app: ac-app
    spec:
      containers:
      - name: ac-gui
        image: ks89/ac-gui
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        volumeMounts:
          - name: gui-config
            mountPath: /etc/nginx/nginx.conf
            subPath: nginx.conf
            readOnly: true
      volumes:
        - name: gui-config
          configMap:
            name: gui-config
