kubernetes-manifests/api-devices.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ac-api-devices
  namespace: ac
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ac-api-devices
  template:
    metadata:
      labels:
        app: ac-api-devices
    spec:
      containers:
      - name: ac-api-devices
        image: ks89/ac-api-devices
        ports:
        - name: grpc
          containerPort: 50051
          protocol: TCP
        volumeMounts:
        - name: api-devices-config
          mountPath: /.env_prod
          subPath: .env_prod
          readOnly: true
      volumes:
      - name: api-devices-config
        configMap:
          name: api-devices-config
---
kind: Service
apiVersion: v1
metadata:
  name: api-devices-svc
  namespace: ac
spec:
  selector:
    app: ac-api-devices
  ports:
  - name: grpc
    protocol: TCP
    port: 50051
    targetPort: grpc
