kubernetes-manifests/api-server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ac-api-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ac-api-server
  template:
    metadata:
      labels:
        app: ac-api-server
    spec:
      containers:
      - name: ac-api-server
        image: ks89/ac-api-server
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        volumeMounts:
        - name: api-server-config
          mountPath: /.env_prod
          subPath: .env_prod
          readOnly: true
      volumes:
      - name: api-server-config
        configMap:
          name: api-server-config
---
kind: Service
apiVersion: v1
metadata:
  name: api-server-svc
spec:
  selector:
    app: ac-api-server
  ports:
    - name: http
      protocol: TCP
      # port exposes the Kubernetes service on the specified port within the cluster.
      # Other pods within the cluster can communicate with this server on the specified port.
      port: 80
      # TargetPort is the port on which the service will send requests to, that your pod will be listening on.
      # Your application in the container will need to be listening on this port also.
      targetPort: http
      # NodePort exposes a service externally to the cluster by means of the target nodes IP address and the NodePort.
      # NodePort is the default setting if the port field is not specified.
      # nodePort: 30036
