kubernetes-manifests/mosquitto.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  namespace: ac
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
      - name: mosquitto
        image: eclipse-mosquitto:2.0
        ports:
        - name: mqtt
          containerPort: 1883
          protocol: TCP
        volumeMounts:
        - name: mosquitto-config
          mountPath: /mosquitto/config/mosquitto.conf
          subPath: mosquitto.conf
      volumes:
      - name: mosquitto-config
        configMap:
          name: mosquitto-config
---
kind: Service
apiVersion: v1
metadata:
  name: mosquitto-svc
  namespace: ac
spec:
  loadBalancerIP: <ADD_YOUR_PUBLIC_FLOATING_IP_HERE>
  type: LoadBalancer
  selector:
    app: mosquitto
  ports:
    - name: mqtt
      protocol: TCP
      port: 1883
      targetPort: mqtt
